less/theme.less
/*!
 * BookingSync Theme for Bootstrap v3.3.5 (http://styleguide.bookingsync.com/)
 * Copyright 2015 BookingSync SAS.
 * Licensed under MIT (https://github.com/BookingSync/styleguide/blob/master/LICENSE)
 */

//
// Load core variables and mixins
// --------------------------------------------------

@import "variables.less";
@import "bookingsync_variables.less";
@import "mixins.less";


//
// Typography
// --------------------------------------------------

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
  & > i {
    padding-right: 7px;
    color: @gray-light;
  }
}


//
// Menu
// --------------------------------------------------

// Recommended addition
//
// .menu {
//   height: 100vh;
//   position: fixed;
//   top: 0;
//   left: 0;
// }
//
.menu {
  background-color: @menu-bg;
  color: @menu-color;
  border-radius: @menu-border-radius;
  width: 47px;
  height: 100%;
  position: relative;
  overflow: hidden;
  z-index: 9999;
  transition: width 0.2s cubic-bezier(.4,0,.2,1);

  &:hover {
    width: 250px;

    .body {
      overflow-y: overlay;
    }
  }

  header,
  footer {
    .bar {
      height: 60px;
      position: relative;
    }

    .brand,
    .avatar {
      height: 24px;
      width: 24px;
      font-size: 24px;
      line-height: 1;
      position: absolute;
      top: 18px;
      left: 12px;
    }

    p {
      margin: 0;
      margin-left: 47px;
      padding-top: 13px;
      line-height: 1.24em;
      white-space: nowrap;
    }
  }

  header {
    background-color: @menu-header-bg;
    color: @menu-header-color;
    position: relative;

    a {
      color: @menu-header-link-color;
    }

    ol {
      margin-bottom: 0;
      border-top: 1px solid @menu-header-link-hover-bg;
      background-color: @menu-header-bg;
      width: 100%;
      position: absolute;
      z-index: 1000;

      a:hover {
        background-color: @menu-header-link-hover-bg;
        color: @menu-header-link-hover-color;
      }
    }

    .bar {
      background-color: @menu-header-bg;
      z-index: 2000;
    }

    #menu-header-submenu {
      width: 100%;

      &.open {
        top: 60px;
      }
    }
  }

  footer {
    background-color: @menu-footer-bg;
    color: @menu-footer-color;

    a {
      color: @menu-footer-link-color;
    }

    i {
      margin-left: 2px;
    }

    #menu-footer-submenu {
      top: 0;
      width: 100%;
      height: 100%;

      ol {
        margin-top: 60px;
        margin-bottom: 0;
      }

      &.open {
        ol {
          background-color: @menu-footer-bg;
        }
      }
    }
  }

  ol {
    // No need to set list-style: none; since li is block level
    padding-left: 0; // reset padding because ul and ol
  }

  li {
    display: block;

    a {
      display: block;
      padding: 10px 15px;
      text-decoration: none;
      white-space: nowrap;
    }
  }

  .body {
    overflow: hidden;
  }

  .body,
  footer {
    li {
      a {
        background-color: @menu-link-bg;
        color: @menu-link-color;

        i {
          color: @menu-link-icon-color;
        }

        span {
          padding-left: 10px;
        }

        &:hover {
          background-color: @menu-link-hover-bg;
          color: @menu-link-hover-color;

          i {
            color: @menu-link-hover-icon-color;
          }
        }
      }

      &.active a,
      &.active:hover a,
      &.active:focus a {
        background-color: @menu-active-bg;
        color: @menu-active-color;

        i {
          color: @menu-active-icon-color;
        }
      }
    }
  }
}


//
// Label
// --------------------------------------------------
.label-transparent {
  border: 1px solid @label-color;
}

//
// Dropdowns
// --------------------------------------------------
.menu-dropdown {
  position: absolute;
  top: -100%;
  .transition(top 0.3s ease-out);
}

.menu-dropdown.open {
  top: 0;
}

.menu-dropright {
  position: absolute;
  left: 100%;
  .transition(left 0.3s ease-out);
}

.menu-dropright.open {
  left: 0;
}

//
// Utilities
// --------------------------------------------------
.flex-col {
  display: flex;
  flex-direction: column;
}

.flex-row {
  display: flex;
}

.flex-1 {
  flex: 1;
}

.flex-middle {
  margin-top: auto;
  margin-bottom: auto;
}

//
// Forms
// --------------------------------------------------

// Form groups
//
// Designed to help with the organization and spacing of vertical forms. For
// horizontal forms, use the predefined grid classes.

.form-group {
  position: relative;
  display: block;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0;
  padding: @label-padding-focus 0 @padding-base-vertical;

  label {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    top: 20px;
    overflow: hidden;
    white-space: nowrap;
    display: inline-block;
    width: 100%;
    max-width: 100%; // Force IE8 to wrap long content
                     // (see https://github.com/twbs/bootstrap/issues/13141)
    margin-bottom: 0;
    font-weight: normal;
    text-align: left;
    color: @input-color;
    pointer-events: none;
    .transition-duration(.2s);
    -webkit-transition-timing-function: cubic-bezier(.4,0,.2,1);
    transition-timing-function: cubic-bezier(.4,0,.2,1);
  }

  .input-group-addon {
    .transition-duration(.2s);
    -webkit-transition-timing-function: cubic-bezier(.4,0,.2,1);
    transition-timing-function: cubic-bezier(.4,0,.2,1);
  }

  &.filled label {
    color: @label-color-filled;
    font-size: @label-font-size-filled;
    top: 0;
    visibility: visible;
  }

  &.focused {
    label {
      color: @label-color-focus;
      font-size: @label-font-size-focus;
      top: 0;
      visibility: visible;

      &:after {
        left: 0;
        visibility: visible;
        width: 100%;
      }
    }

    .input-group label:after {
      visibility: hidden;
    }

    .input-group-addon {
      .box-shadow(0 1px 0 @label-border-focus);
      border-color: @label-color-focus;
    }
  }
}

// FIXME: :not(.readonly) should be used
.form-group label:after {
  background-color: @label-border-focus;
  bottom: 5px;
  content: '';
  height: 2px;
  left: 45%;
  position: absolute;
  visibility: hidden;
  width: 10%;
  .transition-duration(.2s);
  -webkit-transition-timing-function: cubic-bezier(.4,0,.2,1);
  transition-timing-function: cubic-bezier(.4,0,.2,1);
}

.form-group.disabled label,
.form-group.readonly label,
.checkbox.disabled label,
.radio.disabled label,
fieldset[disabled] label {
  color: @label-color-disabled;
}

.form-control[disabled],
.form-control[readonly],
fieldset[disabled] .form-control {
  opacity: .5;
}

// Common form controls
//
// Shared size and type resets for form controls. Apply `.form-control` to any
// of the following form controls:
//
// select
// textarea
// input[type="text"]
// input[type="password"]
// input[type="datetime"]
// input[type="datetime-local"]
// input[type="date"]
// input[type="month"]
// input[type="time"]
// input[type="week"]
// input[type="number"]
// input[type="email"]
// input[type="url"]
// input[type="search"]
// input[type="tel"]
// input[type="color"]
.form-control {
  padding: 0;
  border: none;
  border-bottom: 1px solid @input-border;
  .box-shadow(none);
  .transition-duration(.3s);
  -webkit-transition-timing-function: cubic-bezier(.4,0,.2,1);
  transition-timing-function: cubic-bezier(.4,0,.2,1);

  &:focus {
    border-color: @label-border-focus;
    .box-shadow(0 1px 0 @label-border-focus);
  }

  // read-only inputs
  &[readonly] {
    .box-shadow(none);
  }
}

// Input group
.input-group {
  margin-top: (-1 * (@padding-base-vertical + @label-font-size-focus));

  label {
    left: auto;
    right: auto;
    padding-left: @padding-base-horizontal;
    z-index: 1000;
    top: 17px;
  }

  .form-control {
    padding-left: @padding-base-horizontal;
    margin-top: (@label-padding-focus - (@padding-base-vertical / 2));
  }
}

.input-group-addon {
  border-top: 0;
  padding-top: @input-group-addon-padding-top;
}

.input-group-addon:first-child {
  border-left: 0;
  border-right: 1px solid @input-group-addon-border-color;
}

.input-group-addon:last-child {
  border-right: 0;
  border-left: 1px solid @input-group-addon-border-color;
}

// Feedback states
.has-success,
.has-warning,
.has-error {
  &.focused {
    label:after {
      visibility: hidden;
    }

    .form-control:focus {
      .box-shadow(0 1px 0 @label-border-focus);
      border-color: @label-border-focus;
    }
  }

  .form-control {
    .box-shadow(none);

    &:focus {
      .box-shadow(none);
    }
  }
}

.has-success .input-group-addon {
  border-color: @state-success-border;
}

.has-warning .input-group-addon {
  border-color: @state-warning-border;
}

.has-danger .input-group-addon {
  border-color: @state-danger-border;
}

.has-feedback label {
  & ~ .form-control-feedback {
    top: (@line-height-computed - 2);
  }
}

.has-feedback .input-group ~ .form-control-feedback {
  top: @label-font-size-focus;
}

.form-inline .has-feedback .form-control-feedback {
  top: (@label-font-size-focus + (@padding-base-vertical / 2));
}

.has-feedback label.sr-only ~ .form-control-feedback {
  top: @label-font-size-focus;
}


// Navbar form
//
.navbar-form {
  margin-top: 4.5px;
  margin-bottom: 4.5px;
}

